			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02p: *********************************

BUG: (06/23/05, SMR) Silicon compiler places wells wrong.
FIX: Fixed Maker.

BUG: (06/23/05, SMR) "Peeking" doesn't always work.
FIX: In "PixelDrawing.expandedCellCached()" must call "drawCell()" with proper bounds.

BUG: (06/24/05, DN) Old IO regressions have errors concerning text descriptors.
FIX: In Export constructor and ImmutableTextDescriptor constructor canonize descriptors.

BUG: (06/24/05, DN) Reading a library causes an exception (Bug #398)
FIX: "io.input.ELIB.getArcEnd" saves MessageLog in a private fiels "getArcEndError".

IMP: (06/23/05, RK) Add NCC regression tests for Global Partition

IMP: (06/23/05, RK) Add modified heater to NCC regression

IMP: (06/23/05, RK) For netlist errors, save NccGlobals so IvanM can report errors

BUG: (06/23/05, GVG) Problem to detect min size if elements were touching other nodes of the same layer
(wells in Bug #396). The code was checking only one direction (X or Y)
FIX: Function to iterate along all possible directions (X, Y).

IMP: (06/23/05, GVG) Refactoring of DRC supporting classes for DesignRules tab. More changes in DesignRules tab

BUG: (06/23/05, SMR) CDL output writes include statements (Bug #387)
FIX: Ignore subcircuit overrides when writing CDL.

BUG: (06/23/05, SMR) Cannot connect "Simulation Probe" nodes
FIX: Make them have universal connectivity.

BUG: (06/23/05, DN) Arc properties not preserved when using Duplicate (Bug #391).
FIX: In ArcInst.copyConstraintsFrom assign newBits ti userBits.

BUG: (06/23/05, DN) Network module complains on unconnected pin in GEM and FIDO technologies.
FIX: Don't check in cells with these technologies (NetCell.makeDrawns).

IMP: (06/22/05, GVG) DRC: Sweep as default algorithm. Capacitance demo out of 3D menu.
List Layer Coverage on Cell moved to DRC menu. Ability to abort coverage job (Bug #389).